--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ djangorestframework-simplejwt==5.1.0
 geographiclib==1.52
 geopy==2.2.0
 idna==3.3
+Pillow==9.1.1
 pycodestyle==2.8.0
 pycparser==2.21
 PyJWT==2.3.0
