--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==4.0.3
 django-cors-headers==3.11.0
 django-dotenv==1.4.2
 django-mysql==4.7.0
+django-sslserver==0.22
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 geographiclib==1.52
